{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 30,
  "lineage": "41038a48-c338-0e80-2f79-cae484a15005",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "farmec_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d7ae213c071999a",
            "association_id": "eipassoc-0262cc80db1c6e19c",
            "domain": "vpc",
            "id": "eipalloc-09d7ae213c071999a",
            "instance": "i-0f9866e1d63090286",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-03c717697d47e7dcc",
            "private_dns": "ip-10-0-1-55.eu-west-1.compute.internal",
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-54-194-167-80.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.167.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "FarmecAPI EIP"
            },
            "tags_all": {
              "Name": "FarmecAPI EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.FarmecAPI",
            "aws_key_pair.farmec-ec2",
            "aws_security_group.my_ec2_sg",
            "aws_subnet.farmec_subnet",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "FarmecAPI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:773556241442:instance/i-0f9866e1d63090286",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9866e1d63090286",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "farmec-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c717697d47e7dcc",
            "private_dns": "ip-10-0-1-55.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-3-255-119-29.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.255.119.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0199e2548f391587b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0285ae9640a7f79ab",
            "tags": {
              "Name": "FarmecAPI"
            },
            "tags_all": {
              "Name": "FarmecAPI"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03485edb8ab78a5c1"
            ]
          },
          "dependencies": [
            "aws_key_pair.farmec-ec2",
            "aws_security_group.my_ec2_sg",
            "aws_subnet.farmec_subnet",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "farmec_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:internet-gateway/igw-0f1bd71696fd21693",
            "id": "igw-0f1bd71696fd21693",
            "owner_id": "773556241442",
            "tags": {
              "Name": "FarmecIGW"
            },
            "tags_all": {
              "Name": "FarmecIGW"
            },
            "vpc_id": "vpc-08a655745c31f00c6"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "farmec_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:route-table/rtb-012dc21acce34bca1",
            "id": "rtb-012dc21acce34bca1",
            "owner_id": "773556241442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1bd71696fd21693",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "FarmecRouteTable"
            },
            "tags_all": {
              "Name": "FarmecRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a655745c31f00c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf0764228d85eb5",
            "route_table_id": "rtb-012dc21acce34bca1",
            "subnet_id": "subnet-0285ae9640a7f79ab"
          },
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_route_table.farmec_route_table",
            "aws_subnet.farmec_subnet",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd62627e3b78004c",
            "route_table_id": "rtb-012dc21acce34bca1",
            "subnet_id": "subnet-0d3442bda569ede55"
          },
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_route_table.farmec_route_table",
            "aws_subnet.farmec_subnet_b",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a72a8594aa314812",
            "route_table_id": "rtb-012dc21acce34bca1",
            "subnet_id": "subnet-07d016d3252574e5e"
          },
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_route_table.farmec_route_table",
            "aws_subnet.farmec_subnet_c",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:security-group/sg-03485edb8ab78a5c1",
            "description": "Security Group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03485edb8ab78a5c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_ec2_sg",
            "name_prefix": "",
            "owner_id": "773556241442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Access SG"
            },
            "tags_all": {
              "Name": "SSH Access SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a655745c31f00c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:security-group/sg-03e283c42c098c0d4",
            "description": "Security Group for RDS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e283c42c098c0d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "773556241442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg"
            },
            "tags_all": {
              "Name": "my_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a655745c31f00c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "farmec_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:subnet/subnet-0285ae9640a7f79ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0285ae9640a7f79ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773556241442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Farmec-Subnet-A"
            },
            "tags_all": {
              "Name": "Farmec-Subnet-A"
            },
            "vpc_id": "vpc-08a655745c31f00c6"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "farmec_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:subnet/subnet-0d3442bda569ede55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3442bda569ede55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773556241442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Farmec-Subnet-B"
            },
            "tags_all": {
              "Name": "Farmec-Subnet-B"
            },
            "vpc_id": "vpc-08a655745c31f00c6"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "farmec_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:subnet/subnet-07d016d3252574e5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d016d3252574e5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773556241442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Farmec-Subnet-C"
            },
            "tags_all": {
              "Name": "Farmec-Subnet-C"
            },
            "vpc_id": "vpc-08a655745c31f00c6"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "farmec_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:vpc/vpc-08a655745c31f00c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062e904c31fbb30a9",
            "default_route_table_id": "rtb-065033b4b86c87531",
            "default_security_group_id": "sg-06737735e9776b779",
            "dhcp_options_id": "dopt-073ddfe55371cbd60",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a655745c31f00c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065033b4b86c87531",
            "owner_id": "773556241442",
            "tags": {
              "Name": "FarmecVPC"
            },
            "tags_all": {
              "Name": "FarmecVPC"
            }
          }
        }
      ]
    }
  ]
}